@@ -27,7 +27,8 @@ Build-Depends: cdbs, debhelper (>= 5), sharutils, m4,
 	libiw-dev,
 	mesa-common-dev,
 	libnotify-dev (>= 0.4),
-        yasm
+        yasm,
+	xvfb
 Standards-Version: 3.8.1
 
 Package: firefox-4.0
