@@ -1,0 +1,59 @@
+#!/usr/bin/make -f
+
+MOZ_BUILD_ROOT	:= $(shell echo `pwd`)
+TESTS 		:= check xpcshell-tests reftest crashtest
+
+# Run all testsuite targets
+test: $(TESTS)
+
+# Required for js/src/trace-tests/sunspider/check-date-format-tofte.js
+check: export TZ = :/usr/share/zoneinfo/posix/US/Pacific
+
+# Required for toolkit/mozapps/extensions/test/xpcshell/test_updatecheck.js
+xpcshell-tests: export LC_ALL = C
+
+# Disable tests that fail
+reftest: reftests-disable
+xpcshell-tests: xpcshell-tests-disable
+crashtest: crashtests-disable
+
+# Tests that need a X server
+reftest crashtest: WRAPPER = xvfb-run -s "-screen 0 1024x768x24"
+
+# Run the test!
+$(TESTS):
+	HOME="$(MOZ_BUILD_ROOT)/dist" \
+	$(WRAPPER) $(MAKE) -C $(MOZ_BUILD_ROOT) $@ || true
+
+reftests-disable:
+	# See https://bugzilla.mozilla.org/show_bug.cgi?id=386567
+	sed -ri '/bidi-004/d' $(MOZ_BUILD_ROOT)/layout/reftests/bidi/reftest.list
+
+	# FIXME: Investigate these failures
+	sed -ri '/482592/d' $(MOZ_BUILD_ROOT)/layout/reftests/bugs/reftest.list
+	sed -ri '/textarea-resize-background/d' $(MOZ_BUILD_ROOT)/layout/reftests/forms/reftest.list
+	sed -ri '/scale-stretchy-4/d' $(MOZ_BUILD_ROOT)/layout/reftests/mathml/reftest.list
+	sed -ri '/413027-4/d' $(MOZ_BUILD_ROOT)/layout/reftests/marquee/reftest.list
+	sed -ri '/objectBoundingBox-and-fePointLight-01/d' $(MOZ_BUILD_ROOT)/layout/reftests/svg/reftest.list
+	sed -ri '/translate/d' $(MOZ_BUILD_ROOT)/layout/reftests/transform/reftest.list
+	sed -ri '/abspos/d' $(MOZ_BUILD_ROOT)/layout/reftests/transform/reftest.list
+	sed -ri '/text-font-lang/d' $(MOZ_BUILD_ROOT)/layout/reftests/canvas/reftest.list
+	sed -ri '/src-list-local-full/d' $(MOZ_BUILD_ROOT)/layout/reftests/font-face/reftest.list
+	sed -ri '/local-1/d' $(MOZ_BUILD_ROOT)/layout/reftests/font-face/reftest.list
+	sed -ri '/defaultjapanese-/d' $(MOZ_BUILD_ROOT)/layout/reftests/font-matching/reftest.list
+	sed -ri '/background-image-zoom-1/d' $(MOZ_BUILD_ROOT)/layout/reftests/image/reftest.list
+	sed -ri '/text-language-00/d' $(MOZ_BUILD_ROOT)/layout/reftests/svg/reftest.list
+
+xpcshell-tests-disable:
+	# FIXME: Investigate these failures
+	rm -f $(MOZ_BUILD_ROOT)/_tests/xpcshell/xpcom/tests/unit/test_nsIProcess.js
+	rm -f $(MOZ_BUILD_ROOT)/_tests/xpcshell/xpcom/tests/unit/test_bug364285-1.js
+	rm -f $(MOZ_BUILD_ROOT)/_tests/xpcshell/browser/components/places/tests/unit/test_browserGlue_smartBookmarks.js
+	rm -f $(MOZ_BUILD_ROOT)/_tests/xpcshell/uriloader/exthandler/tests/unit/test_handlerService.js
+
+	# Needs GConf to be running. I guess we need to start with dbus-launch to fix this
+	rm -f $(MOZ_BUILD_ROOT)/_tests/xpcshell/browser/components/shell/test/unit/test_421977.js
+
+crashtests-disable:
+	# FIXME: Investigate these failures
+	sed -ri '/237421-2/d' $(MOZ_BUILD_ROOT)/layout/tables/crashtests/crashtests.list
