@@ -471,6 +471,14 @@ firefox-4.0 (4.0~b7~hg20100915r53868+nobinonly-0ubuntu1) UNRELEASED; urgency=low
     js/src/config/, as this causes test-suite failures
     - update debian/patches/bz386904_config_rules_install_dist_files.patch
     - update debian/patches/lp512615_cairo_lcd_filter.patch
+  * Add support for running the Mozilla test suite at build time. Currently,
+    we run the following targets: check, xpcshell-tests, reftest and crashtest.
+    Some tests fail, so those have been disabled and we need to fix them. Also,
+    test suite failures aren't fatal just yet, so we can see if any others fail
+    on the builders
+    - add debian/testsuite.mk
+    - update debian/rules
+    - update debian/control
 
   [ Alexander Sack <asac@linaro.org> ]
   * add support for mozilla breakpad symbols and in turn enable
@@ -478,9 +486,9 @@ firefox-4.0 (4.0~b7~hg20100915r53868+nobinonly-0ubuntu1) UNRELEASED; urgency=low
     - add debian/patches/ftbfs_crashreporter.patch   
     - update debian/patches/series
     - update debian/control
-    - update debian/rules 
+    - update debian/rules
 
- -- Chris Coulson <chris.coulson@canonical.com>  Thu, 16 Sep 2010 03:45:13 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Thu, 16 Sep 2010 21:16:51 +0100
 
 firefox-3.6 (3.6~a2~hg20090810r31291+nobinonly-0ubuntu1) UNRELEASED; urgency=low
 
